// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should correctly render ExpensesSummary with multiple expenses 1`] = `
<div>
  <h2>
    Viewing 
    5
     
    expenses
     totalling 
    $34,697.56
  </h2>
</div>
`;

exports[`Should correctly render ExpensesSummary with one expense 1`] = `
<div>
  <h2>
    Viewing 
    1
     
    expense
     totalling 
    $1,200.60
  </h2>
</div>
`;
